[gd_scene load_steps=55 format=2]

[ext_resource path="res://Character/Spearman_bot.gd" type="Script" id=1]
[ext_resource path="res://Graphics/Spectral_spear/new/Spectral_spear.png" type="Texture" id=2]
[ext_resource path="res://Graphics/Spectral_spear/new/die/Spectral_spear_diedie_1.png" type="Texture" id=3]
[ext_resource path="res://Graphics/Spectral_spear/new/die/Spectral_spear_diedie_2.png" type="Texture" id=4]
[ext_resource path="res://Graphics/Spectral_spear/new/die/Spectral_spear_diedie_3.png" type="Texture" id=5]
[ext_resource path="res://Graphics/Spectral_spear/new/die/Spectral_spear_diedie_4.png" type="Texture" id=6]
[ext_resource path="res://Graphics/Spectral_spear/new/die/Spectral_spear_diedie_5.png" type="Texture" id=7]
[ext_resource path="res://Graphics/Spectral_spear/new/die/Spectral_spear_diedie_6.png" type="Texture" id=8]
[ext_resource path="res://Graphics/Spectral_spear/new/die/Spectral_spear_diedie_7.png" type="Texture" id=9]
[ext_resource path="res://Graphics/Spectral_spear/new/die/Spectral_spear_diedie_8.png" type="Texture" id=10]
[ext_resource path="res://Graphics/Spectral_spear/new/die/Spectral_spear_diedie_9.png" type="Texture" id=11]
[ext_resource path="res://Graphics/Spectral_spear/new/die/Spectral_spear_diedie_10.png" type="Texture" id=12]
[ext_resource path="res://Graphics/Spectral_spear/new/die/Spectral_spear_diedie_11.png" type="Texture" id=13]
[ext_resource path="res://Graphics/Spectral_spear/new/die/Spectral_spear_diedie_12.png" type="Texture" id=14]
[ext_resource path="res://Graphics/Spectral_spear/new/die/Spectral_spear_diedie_13.png" type="Texture" id=15]
[ext_resource path="res://Graphics/Spectral_spear/new/attack/aim_up/Spectral_spear_aim_upattack_1.png" type="Texture" id=16]
[ext_resource path="res://Graphics/Spectral_spear/new/attack/aim_mid/Spectral_spear_aim_midattack_1.png" type="Texture" id=17]
[ext_resource path="res://Graphics/Spectral_spear/new/attack/aim_mid/Spectral_spear_aim_midattack_2.png" type="Texture" id=18]
[ext_resource path="res://Graphics/Spectral_spear/new/attack/aim_mid/Spectral_spear_aim_midattack_3.png" type="Texture" id=19]
[ext_resource path="res://Graphics/Spectral_spear/new/attack/aim_mid/Spectral_spear_aim_midattack_4.png" type="Texture" id=20]
[ext_resource path="res://Graphics/Spectral_spear/new/attack/attack_mid/Spectral_spear_attack_midattack_1.png" type="Texture" id=21]
[ext_resource path="res://Graphics/Spectral_spear/new/attack/attack_mid/Spectral_spear_attack_midattack_2.png" type="Texture" id=22]
[ext_resource path="res://Graphics/Spectral_spear/new/attack/attack_mid/Spectral_spear_attack_midattack_3.png" type="Texture" id=23]
[ext_resource path="res://Graphics/Spectral_spear/new/attack/attack_mid/Spectral_spear_attack_midattack_4.png" type="Texture" id=24]
[ext_resource path="res://Graphics/Spectral_spear/new/attack/attack_mid/Spectral_spear_attack_midattack_5.png" type="Texture" id=25]
[ext_resource path="res://Graphics/Spectral_spear/new/attack/attack_mid/Spectral_spear_attack_midattack_6.png" type="Texture" id=26]
[ext_resource path="res://Graphics/Spectral_spear/new/attack/attack_up/Spectral_spear_attack_upattack_1.png" type="Texture" id=27]
[ext_resource path="res://Graphics/Spectral_spear/new/attack/attack_up/Spectral_spear_attack_upattack_2.png" type="Texture" id=28]
[ext_resource path="res://Graphics/Spectral_spear/new/attack/attack_up/Spectral_spear_attack_upattack_3.png" type="Texture" id=29]
[ext_resource path="res://Graphics/Spectral_spear/new/attack/attack_up/Spectral_spear_attack_upattack_4.png" type="Texture" id=30]
[ext_resource path="res://Graphics/Spectral_spear/new/mouv/Spectral_spear_walk_2walk_3.png" type="Texture" id=31]
[ext_resource path="res://Graphics/Spectral_spear/new/mouv/Spectral_spear_walk_2walk_4.png" type="Texture" id=33]
[ext_resource path="res://Graphics/Spectral_spear/new/mouv/Spectral_spear_walk_2walk_5.png" type="Texture" id=34]
[ext_resource path="res://Graphics/Spectral_spear/new/mouv/Spectral_spear_walk_2walk_6.png" type="Texture" id=35]
[ext_resource path="res://Graphics/Spectral_spear/new/mouv/Spectral_spear_walk_2walk_7.png" type="Texture" id=36]
[ext_resource path="res://Graphics/Spectral_spear/new/mouv/Spectral_spear_walk_2walk_8.png" type="Texture" id=37]
[ext_resource path="res://Graphics/Spectral_spear/new/mouv/Spectral_spear_walk_2walk_9.png" type="Texture" id=38]
[ext_resource path="res://Graphics/Spectral_spear/new/mouv/Spectral_spear_legs.png" type="Texture" id=39]
[ext_resource path="res://Graphics/interface/bar_vie/bar_vie.png" type="Texture" id=40]
[ext_resource path="res://Graphics/interface/bar_vie/vie.png" type="Texture" id=41]
[ext_resource path="res://Graphics/interface/bar_vie/bar_vie_divine_shield.png" type="Texture" id=42]
[ext_resource path="res://Graphics/interface/bar_vie/vie_divine_shield.png" type="Texture" id=43]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 20 ), ExtResource( 19 ), ExtResource( 17 ), ExtResource( 18 ) ],
"loop": false,
"name": "raise",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "mouv",
"speed": 7.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ) ],
"loop": false,
"name": "die",
"speed": 8.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "static",
"speed": 5.0
}, {
"frames": [ ExtResource( 16 ) ],
"loop": false,
"name": "aim_up",
"speed": 5.0
}, {
"frames": [ ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ) ],
"loop": true,
"name": "attack_mid",
"speed": 8.0
}, {
"frames": [ ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ) ],
"loop": false,
"name": "aim_mid",
"speed": 6.0
}, {
"frames": [ ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ) ],
"loop": true,
"name": "attack_up",
"speed": 8.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ null ],
"loop": true,
"name": "off",
"speed": 5.0
}, {
"frames": [ ExtResource( 31 ), ExtResource( 33 ), ExtResource( 34 ), ExtResource( 35 ), ExtResource( 36 ), ExtResource( 37 ), ExtResource( 38 ) ],
"loop": true,
"name": "mouv",
"speed": 7.0
}, {
"frames": [ ExtResource( 39 ) ],
"loop": true,
"name": "static",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 10, 4 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 40 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [  ],
"loop": true,
"name": "off",
"speed": 5.0
}, {
"frames": [ ExtResource( 42 ) ],
"loop": true,
"name": "divine_shield",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 41 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ null ],
"loop": true,
"name": "off",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ ExtResource( 43 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ null ],
"loop": true,
"name": "off",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 64, 41 )

[sub_resource type="CapsuleShape2D" id=8]
radius = 6.0
height = 28.0

[sub_resource type="Animation" id=9]
resource_name = "aim_mid"
length = 0.35
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Spearman_spr:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "aim_mid" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Spearman_spr:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Spearman_spr/attack_hitbox_mid/hitbox:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=10]
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Spearman_spr/attack_hitbox_mid/hitbox:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Spearman_spr:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "attack_mid" ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Spearman_spr:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.6 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_attack_again"
} ]
}

[sub_resource type="Animation" id=11]
tracks/0/type = "value"
tracks/0/path = NodePath("Spearman_spr:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "die" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Spearman_spr/Spearman_legs:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "off" ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Spearman_spr/attack_hitbox_mid/hitbox:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=12]
length = 0.35
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Spearman_spr:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "raise" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Spearman_spr:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Spearman_spr/attack_hitbox_mid/hitbox:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_scan"
} ]
}

[node name="Spearman" type="RigidBody2D" groups=[
"Character_red",
"Spearman",
]]
collision_layer = 2
collision_mask = 142
mode = 2
custom_integrator = true
script = ExtResource( 1 )

[node name="Spearman_spr" type="AnimatedSprite" parent="." groups=[
"Character_sprite",
]]
frames = SubResource( 1 )
animation = "aim_mid"

[node name="Spearman_legs" type="AnimatedSprite" parent="Spearman_spr"]
frames = SubResource( 2 )
animation = "off"

[node name="attack_hitbox_mid" type="Area2D" parent="Spearman_spr"]
collision_layer = 0
collision_mask = 2180

[node name="hitbox" type="CollisionShape2D" parent="Spearman_spr/attack_hitbox_mid"]
position = Vector2( 24, -6 )
scale = Vector2( 1.5, 1 )
shape = SubResource( 3 )

[node name="barre_vie" type="AnimatedSprite" parent="Spearman_spr"]
position = Vector2( -4, -23 )
frames = SubResource( 4 )

[node name="vie" type="AnimatedSprite" parent="Spearman_spr/barre_vie"]
position = Vector2( -8, -13 )
frames = SubResource( 5 )
centered = false

[node name="divine_shield" type="AnimatedSprite" parent="Spearman_spr/barre_vie"]
position = Vector2( -6, -9 )
frames = SubResource( 6 )
animation = "off"
centered = false

[node name="aim_check" type="Area2D" parent="Spearman_spr"]
collision_layer = 0
collision_mask = 2180

[node name="hitbox" type="CollisionShape2D" parent="Spearman_spr/aim_check"]
position = Vector2( 64, -41 )
shape = SubResource( 7 )

[node name="hit_box" type="CollisionShape2D" parent="."]
position = Vector2( -3, 0 )
shape = SubResource( 8 )
__meta__ = {
"_edit_lock_": true
}

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/aim_mid = SubResource( 9 )
anims/attack = SubResource( 10 )
anims/die = SubResource( 11 )
anims/raise_mid = SubResource( 12 )
[connection signal="body_entered" from="Spearman_spr/attack_hitbox_mid" to="." method="_on_attack_hitbox_mid_body_entered"]
[connection signal="body_entered" from="Spearman_spr/aim_check" to="." method="_on_aim_check_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
